[Prathmesh]Added:Swagger part added successfully.
